--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,11 @@ version: '3.8'
 services:
   db:
     image: mysql:8.0
-    container_name: prisma_mysql_04
+    container_name: prisma_mysql
     restart: unless-stopped
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: atividade12jwtdb
+      MYSQL_DATABASE: zenfocos_db
     ports:
       - "3306:3306"
     volumes:
