feat: add Docker support with Dockerfile and render.yaml for deployment

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,33 @@
-DATABASE_URL="mysql://root:root@localhost:3306/zenfocos_db"
-JWT_SECRET="your-super-secret-jwt-key-change-in-production"
+# ===========================================
+# ZEN FOCOS - Variáveis de Ambiente
+# ===========================================
+# Copie este arquivo para .env e configure os valores
+
+# ===========================================
+# Ambiente
+# ===========================================
 NODE_ENV="development"
 PORT=3000
-ALLOWED_ORIGINS="http://localhost:3000,http://localhost:3001"
+
+# ===========================================
+# Banco de Dados
+# ===========================================
+# MySQL Local (Docker Compose)
+DATABASE_URL="mysql://root:root@localhost:3306/zenfocos_db"
+
+# MySQL PlanetScale (Produção)
+# DATABASE_URL="mysql://user:password@host.planetscale.com/database?sslaccept=strict"
+
+# ===========================================
+# Autenticação JWT
+# ===========================================
+JWT_SECRET="your-super-secret-jwt-key-change-in-production"
+
+# ===========================================
+# Segurança
+# ===========================================
+# Custo do bcrypt (4-14, maior = mais seguro mas mais lento)
 BCRYPT_COST_FACTOR=12
+
+# Origens permitidas para CORS (separadas por vírgula)
+ALLOWED_ORIGINS="http://localhost:3000,http://localhost:3001"
