--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "zen-focos",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "API de gerenciamento de tarefas com técnica Pomodoro",
+  "author": "ZenFocos Team",
   "private": true,
   "license": "UNLICENSED",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "build": "nest build && mkdir -p dist/generated && cp -r generated/prisma/* dist/generated/",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -20,10 +23,13 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "npx prisma migrate dev --name init",
+    "prisma:migrate:deploy": "prisma migrate deploy",
     "prisma:studio": "prisma studio",
     "prisma:reset": "prisma migrate reset",
     "docker:up": "docker compose up -d",
-    "docker:down": "docker compose down"
+    "docker:down": "docker compose down",
+    "render:build": "npm ci && npx prisma generate && npm run build",
+    "render:start": "npx prisma migrate deploy && node dist/src/main"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
