--- a/package.json
+++ b/package.json
@@ -28,8 +28,14 @@
     "prisma:reset": "prisma migrate reset",
     "docker:up": "docker compose up -d",
     "docker:down": "docker compose down",
+    "dev": "npm run start:dev",
+    "migrate:dev": "prisma migrate dev",
+    "migrate:prod": "prisma migrate deploy",
+    "studio": "prisma studio",
+    "generate": "prisma generate",
     "render:build": "npm ci && npx prisma generate && npm run build",
-    "render:predeploy": "npx prisma migrate deploy"
+    "render:predeploy": "npx prisma migrate deploy",
+    "clever:predeploy": "npx prisma generate && npx prisma migrate deploy"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -39,7 +45,7 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.3",
-    "@prisma/client": "6.19.0",
+    "@prisma/client": "^6.19.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
@@ -69,7 +75,7 @@
     "globals": "^16.0.0",
     "jest": "^30.0.0",
     "prettier": "^3.4.2",
-    "prisma": "6.19.0",
+    "prisma": "^6.19.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
